k8s/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: nexus-docker.minikube/i.b.vermeg:webapp
        ports:
        - name: http-port
          containerPort: 8080
          protocol: TCP
